--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if user_signed_in? %>
+      <p>
+        Logged in as: <%= current_user.email %>
+        | <%= link_to 'Edit account', edit_user_registration_path %>
+        | <%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %>
+      </p>
+    <% else %>
+      <p>
+        <%= link_to 'Sign In', new_user_registration_path %>
+        | <%= link_to 'Sign Up', new_user_session_path %>
+      </p>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
